deployments/store/deployment_ppe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: federation-demo-store-ppe
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: federation-demo-store
      env: ppe
      version: ppe
  template:
    metadata:
      labels:
        app: federation-demo-store
        env: ppe 
        version: ppe
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
            #nodeSelector:
            #  federation-demo-store: "true"
      containers:
        - name: node-service
          image: core.harbor.domain/demo/federation-demo-store:ppe-1.1.5
          imagePullPolicy: IfNotPresent
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 20
            tcpSocket:
              port: 8888
          ports:
            - name: mainport
              containerPort: 8888
            - name: dlv
              containerPort: 2345
