deployments/store/virtual_server.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: federation-demo-store
spec:
  hosts:
    -  federation-demo-store
  http:
    - match:
        - headers:
            x-env:
              exact: "ppe"
      route:
        - destination:
            host:  federation-demo-store
            subset: ppe
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: unavailable,gateway-error,connect-failure,refused-stream,reset,retriable-status-codes
    - route:
        - destination:
            host:  federation-demo-store
            subset: prod
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: unavailable,gateway-error,connect-failure,refused-stream,reset,retriable-status-codes
